--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Latest commit 2544c87 on Aug 20, 2018
 <head>
   <base target="_blank">
   <meta charset="UTF-8" />
-  <title>Anon Developer</title>
+  <title>Brendan K. OConnell</title>
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
