AWS portfolio modal content w/ description  & FullStackMEAN portfolio modal description update

--- a/index.html
+++ b/index.html
@@ -297,7 +297,23 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">View repository for source code:</p>
+                                    <p class="mb-4">Based on the final project for my CS 465 Full Stack I class.</p>
+                                    <p class="mb-4">This JavaScript project builds a MEAN full stack application with an MVC design pattern and a RESTful API backend service. 
+                                        The Node.JS server hosts dynamic HTML pages, utilizing Handlebars as the view engine. 
+                                        Routers map the incoming requests and controllers hold the program's logic. 
+                                        The model schema is set with Mongoose ODM, which works with Express.JS to interact with the Mongo database. 
+                                        A frontend administration page is created using Angular.JS, 
+                                        and Node.JS security packages assist with implementing user registration and user authentication logic. 
+                                        The Angular frontend is setup as an SPA, providing a highly interactive interface for the client.                           
+                                    </p>
+                                    <p class="mb-4">My project improves upon a partially built class project, and the content for my project is original. 
+                                        It is based on a real company, with their permission, but does not represent their official website. 
+                                        For a detailed review of this project, including the specific differences from the original class project, 
+                                        please watch my screencast below:
+                                    </p>
+                                <!-- FIX ME:  Need to change hyperlink once screencast is posted to youtube -->
+                                    <p class="mb-4"><a href=https://www.youtube.com/watch?v=in1-8KDbTXw>https://www.youtube.com/watch?v=in1-8KDbTXw</a></p>
+                                    <p class="mb-4">For the source code, please visit my Github repository:</p>
                                     <p class="mb-4"><a href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/floweringspaces/</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -320,7 +336,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Full Stack - MEAN</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">AWS Serverless Cloud</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -328,10 +344,16 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/AWS_modal_pic.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">View repository for source code:</p>
-                                    <p class="mb-4"><a href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/floweringspaces/</a></p>
+                                    <p class="mb-4">Final project for my CS-470 Full Stack II class. </p>
+                                    <p class="mb-4">This project migrates an existing MEAN full stack application to the AWS cloud. 
+                                        Docker is used for containerizing the Angular frontend.
+                                        The container is dropped into an S3 bucket in the AWS console for deployment to a serverless cloud host. 
+                                        The backend API is refactored using API Gateway, Lambda functions, and AWS security features.
+                                        The database is built from scratch with DynamoDB NoSQL tables. </p>
+                                    <p class="mb-4">For a detailed review of this project, please watch my final project presentation here:</p>
+                                    <p class="mb-4"><a href=https://www.youtube.com/watch?v=in1-8KDbTXw>https://www.youtube.com/watch?v=in1-8KDbTXw</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
