--- a/index.html
+++ b/index.html
@@ -85,16 +85,14 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
-                <!--
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/fullstack_MEAN.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/Client_Server_Python_modal.png" alt="..." />
                         </div>
                     </div>
-                -->
                     <!-- Portfolio Item 4-->
                 <!--
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
@@ -300,7 +298,7 @@
                                     <p class="mb-4">Based on the final project for my CS 465 Full Stack I class.</p>
                                     <p class="mb-4">This JavaScript project builds a MEAN full stack application with an MVC design pattern and a RESTful API backend service. 
                                         The Node.JS server hosts dynamic HTML pages, utilizing Handlebars as the view engine. 
-                                        Routers map the incoming requests and controllers hold the program's logic. 
+                                        Routers map all incoming requests, and controllers contain the program's logic. 
                                         The model schema is set with Mongoose ODM, which works with Express.JS to interact with the Mongo database. 
                                         A frontend administration page is created using Angular.JS, 
                                         and Node.JS security packages assist with implementing user registration and user authentication logic. 
@@ -375,7 +373,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Full Stack - MEAN</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Client/Server - Python</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -383,10 +381,18 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Client_Server_Python_modal.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">View repository for source code:</p>
-                                    <p class="mb-4"><a href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/floweringspaces/</a></p>
+                                    <p class="mb-4">Final project for my CS-340 Client/Server Development in Linux class. </p>
+                                    <p class="mb-4">This full stack Python project uses MongoDB to manage the raw data (base/server level). 
+                                        The client-level web application is built using Python’s Dash framework. 
+                                        This application interacts with the CRUD Python Module, which is the middleware layer for the stacked development. 
+                                        It is the “glue” between the base level and the client level and contains the application's logic. 
+                                        The CRUD Python Module utilizes the PyMongo driver, which allows for a quick and reliable connection to the MongoDB server. 
+                                        </p>
+                                    <p class="mb-4">For the source code, please visit my Github repository. 
+                                        You can also view the CS 340 README.docx for more details regarding the project submission:</p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/CS340-final-project>https://github.com/bkoconnell/CS340-final-project/</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
