minor change to portfolio modal1 text

--- a/index.html
+++ b/index.html
@@ -306,11 +306,12 @@
                                     </p>
                                     <p class="mb-4">My project improves upon a partially built class project, and the content for my project is original. 
                                         It is based on a real company, with their permission, but does not represent their official website. 
-                                        For a detailed review of this project, including the specific differences from the original class project, 
-                                        please watch my screencast below:
+                                        <!-- For a detailed review of this project, including the specific differences from the original class project, 
+                                        please watch my screencast below: -->
                                     </p>
-                                <!-- FIX ME:  Need to change hyperlink once screencast is posted to youtube -->
+                                <!-- FIX ME:  Need to change hyperlink once screencast is posted to youtube
                                     <p class="mb-4"><a href=https://www.youtube.com/watch?v=in1-8KDbTXw>https://www.youtube.com/watch?v=in1-8KDbTXw</a></p>
+                                -->
                                     <p class="mb-4">For the source code, please visit my Github repository:</p>
                                     <p class="mb-4"><a href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/floweringspaces/</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
