remove Contact Form section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#resume">Resume</a></li>
+                        <!--
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+                        -->
                     </ul>
                 </div>
             </div>
@@ -187,18 +189,21 @@
         </section>
 
 
-        <!-- CONTACT SECTION -->
+        <!-- CONTACT SECTION 
         <section class="page-section" id="contact">
             <div class="container">
-                <!-- Contact Section Heading-->
+            -->
+                <!-- Contact Section Heading
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-                <!-- Icon Divider-->
+                -->
+                <!-- Icon Divider
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <!-- Contact Section Form-->
+            -->
+                <!-- Contact Section Form
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
                         <form>
@@ -225,6 +230,7 @@
                 </div>
             </div>
         </section>
+        -->
 
 
         <!-- FOOTER -->
