--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
-                <!--
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -105,7 +104,6 @@
                             <img class="img-fluid" src="assets/img/portfolio/fullstack_MEAN.png" alt="..." />
                         </div>
                     </div>
-                -->
                     <!-- Portfolio Item 5-->
                 <!--
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
@@ -425,7 +423,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Full Stack - MEAN</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Embedded Systems - Milestone Projects</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -436,7 +434,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">View repository for source code:</p>
-                                    <p class="mb-4"><a href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/floweringspaces/</a></p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/cs350-milestones/</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
