--- a/index.html
+++ b/index.html
@@ -423,7 +423,8 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Embedded Systems - Milestone Projects</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Embedded Systems:</h2>
+                                    <h3 class="portfolio-modal-title text-secondary mb-0">Milestone Projects</h3>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -434,7 +435,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">View repository for source code:</p>
-                                    <p class="mb-4"><a href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/cs350-milestones/</a></p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/cs350-milestones>https://github.com/bkoconnell/cs350-milestones/</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
