portfolio modal 4 text changes

--- a/index.html
+++ b/index.html
@@ -434,6 +434,13 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
+                                    <h6 class="mb-4">CS350 Emerging Systems, Architectures, and Technologies (embedded systems w/ raspberry pi4 and grovepi+) </h6>
+                                    <p class="mb-4">In this class, we explored emerging systems, architectures, and technologies with a focus on hardware/software interface. 
+                                        Utilizing the Raspberry Pi embedded system and the GrovePi+ sensor kit, we wrote specific software to interface with the embedded system 
+                                        and control hardware and software components. The following milestone projects are the building blocks for the eventual final project. </p>
+                                    <br />
+                                    <p class="mb-4">This
+                                        </p>
                                     <p class="mb-4">View repository for source code:</p>
                                     <p class="mb-4"><a href=https://github.com/bkoconnell/cs350-milestones>https://github.com/bkoconnell/cs350-milestones/</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
