portfolio modal 4 -- add milestone 1 details

--- a/index.html
+++ b/index.html
@@ -434,15 +434,24 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <h6 class="mb-4">CS350 Emerging Systems, Architectures, and Technologies (embedded systems w/ raspberry pi4 and grovepi+) </h6>
+                                    <h6 class="mb-4">CS350 Emerging Systems, Architectures, and Technologies </h6>
+                                    <p class="mb-4">(embedded systems w/ raspberry pi4 and grovepi+) </p>
                                     <p class="mb-4">In this class, we explored emerging systems, architectures, and technologies with a focus on hardware/software interface. 
                                         Utilizing the Raspberry Pi embedded system and the GrovePi+ sensor kit, we wrote specific software to interface with the embedded system 
-                                        and control hardware and software components. The following milestone projects are the building blocks for the eventual final project. </p>
-                                    <br />
-                                    <p class="mb-4">This
-                                        </p>
-                                    <p class="mb-4">View repository for source code:</p>
+                                        and control hardware and software components. The following milestone projects are the building blocks for the eventual final project.
+                                    </p>
+                                    <p class="mb-4">View repository for source code and Readme.MD:</p>
                                     <p class="mb-4"><a href=https://github.com/bkoconnell/cs350-milestones>https://github.com/bkoconnell/cs350-milestones/</a></p>
+                                    <br />
+                                    <h6 class="mb-4">Milestone 1 - Sound Sensor </h6>
+                                    <p class="mb-4">This introductory milestone introduced a basic sound sensor from the GrovePi+ kit. 
+                                        An LED light was attached to the embedded system along with the sound senor, and software was modified accordingly 
+                                        so that when sound exceeded a specified threshold it triggered the LED light to turn on. 
+                                        The specific milestone 1 modifications are commented in the source code. 
+                                    </p>
+                                    <p class="mb-4">Milestone 1 source code: https://github.com/bkoconnell/cs350-milestones/tree/main/milestone1_sound_sensor </p>
+                                    <p class="mb-4">Milestone 1 demo: https://youtu.be/Qr349Zf1F6U </p>
+                                    <br />                                    
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
