video quality text

--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
                                         View repository for source code and Readme file:
                                     </p>
                                     <p class="mb-4"><a href=https://github.com/bkoconnell/cs350-milestones>https://github.com/bkoconnell/cs350-milestones/</a></p>
+                                    <p class="mb-4">For Youtube demos, ensure the video is set to the highest quality. </p>
                                     <br />
                                     <h6 class="mb-4">Milestone 1 - Sound Sensor </h6>
                                     <p class="mb-4">This introductory milestone utilized a basic sound sensor from the GrovePi+ kit. 
