video quality text

--- a/index.html
+++ b/index.html
@@ -453,7 +453,8 @@
                                     <p class="mb-4">Milestone 1 source code: 
                                         <a href=https://github.com/bkoconnell/cs350-milestones/tree/main/milestone1_sound_sensor>https://github.com/bkoconnell/cs350-milestones/tree/main/milestone1_sound_sensor </a></p>
                                     <p class="mb-4">Milestone 1 demo: 
-                                        <a href=https://youtu.be/Qr349Zf1F6U>https://youtu.be/Qr349Zf1F6U</a></p>
+                                        <a href=https://youtu.be/Qr349Zf1F6U>https://youtu.be/Qr349Zf1F6U</a><br />
+                                        (ensure the video is set to the highest quality)</p>
                                     <br />
                                     <h6 class="mb-4">Milestone 2 - Digital Humidity & Temperature Sensor </h6>
                                     <p class="mb-4">This milestone is the first building block for the final project. 
